tests/no_compile/cant_fake_inner_block.stderr
error[E0599]: no associated function or constant named `new_mmio` found for struct `UartBank` in the current scope
  --> tests/no_compile/cant_fake_inner_block.rs:14:10
   |
 4 | struct UartBank {
   | --------------- associated function or constant `new_mmio` not found for this struct
...
14 | #[derive(derive_mmio::Mmio)]
   |          ^^^^^^^^^^^^^^^^^ associated function or constant not found in `UartBank`
   |
   = note: this error originates in the derive macro `derive_mmio::Mmio` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `MmioUartBank<'_>: derive_mmio::_MmioMarker` is not satisfied
  --> tests/no_compile/cant_fake_inner_block.rs:20:13
   |
20 |     bank_0: UartBank,
   |             ^^^^^^^^ unsatisfied trait bound
   |
help: the trait `derive_mmio::_MmioMarker` is not implemented for `MmioUartBank<'_>`
  --> tests/no_compile/cant_fake_inner_block.rs:9:1
   |
 9 | struct MmioUartBank<'a> {
   | ^^^^^^^^^^^^^^^^^^^^^^^
help: the trait `derive_mmio::_MmioMarker` is implemented for `MmioUart<'_>`
  --> tests/no_compile/cant_fake_inner_block.rs:14:10
   |
14 | #[derive(derive_mmio::Mmio)]
   |          ^^^^^^^^^^^^^^^^^
note: required by a bound in `is_mmio`
  --> src/lib.rs
   |
   | pub const fn is_mmio<M: _MmioMarker>() {}
   |                         ^^^^^^^^^^^ required by this bound in `is_mmio`
   = note: this error originates in the derive macro `derive_mmio::Mmio` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `MmioUartBank<'_>: derive_mmio::_MmioMarker` is not satisfied
  --> tests/no_compile/cant_fake_inner_block.rs:22:13
   |
22 |     bank_1: UartBank,
   |             ^^^^^^^^ unsatisfied trait bound
   |
help: the trait `derive_mmio::_MmioMarker` is not implemented for `MmioUartBank<'_>`
  --> tests/no_compile/cant_fake_inner_block.rs:9:1
   |
 9 | struct MmioUartBank<'a> {
   | ^^^^^^^^^^^^^^^^^^^^^^^
help: the trait `derive_mmio::_MmioMarker` is implemented for `MmioUart<'_>`
  --> tests/no_compile/cant_fake_inner_block.rs:14:10
   |
14 | #[derive(derive_mmio::Mmio)]
   |          ^^^^^^^^^^^^^^^^^
note: required by a bound in `is_mmio`
  --> src/lib.rs
   |
   | pub const fn is_mmio<M: _MmioMarker>() {}
   |                         ^^^^^^^^^^^ required by this bound in `is_mmio`
   = note: this error originates in the derive macro `derive_mmio::Mmio` (in Nightly builds, run with -Z macro-backtrace for more info)
